Fix compile errors after upgrading various libraries.